--- a/DYEat/src/main/resources/templates/views/order/orderList.html
+++ b/DYEat/src/main/resources/templates/views/order/orderList.html
@@ -22,8 +22,8 @@
                                     <p class="w-lg-50"></p>
                                 </div>
                             </div>
-                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                                <div class="col offset-xl-1 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <div th:each="Menulist : ${Data}" class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                <div class="col offset-xl-1 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" th:src="${Menulist}">
                                     <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
                                     <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
                                 </a></div>
