--- a/DYEat/src/main/resources/templates/views/order/orderDetail.html
+++ b/DYEat/src/main/resources/templates/views/order/orderDetail.html
@@ -11,11 +11,14 @@
     <div class="container-fluid top-container">
         <div class="row">
             <div class="col-12 col-md-6 col-xl-4 offset-xl-2">
-                <div class="img-container"><img class="rounded" id="expandedImg" style="width:100%" src="assets/img/img1-min.jpg">
+                <div class="img-container"><img class="rounded" id="expandedImg" style="width:100%"
+                                                src="assets/img/img1-min.jpg">
                     <div id="imgtext"></div>
                 </div>
                 <div class="row img-row" style="padding-right: 10px;padding-left: 10px;">
-                    <div th:each="imageList : ${menuId.menu_images}" class="col column"><img class="img-thumbnail img-fluid" th:src="|/images/${imageList.getSaveName()}|" onclick="myFunction(this);" alt="image 1"></div>
+                    <div th:each="imageList : ${menuId.menu_images}" class="col column"><img
+                            class="img-thumbnail img-fluid" th:src="|/images/${imageList.getSaveName()}|"
+                            onclick="myFunction(this);" alt="image 1"></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-xl-4 offset-xl-0">
@@ -29,18 +32,22 @@
                     <li>Lightweight<br></li>
                     <li>Classic fit<br></li>
                 </ul>
-                    <li>Double-needle sleeve and bottom hem<br></li>
+                <li>Double-needle sleeve and bottom hem<br></li>
             </div>
         </div>
     </div>
     <div class="d-xxl-flex justify-content-xxl-center">
         <div class="row" style="width: 80%;">
             <div class="col d-xxl-flex justify-content-xxl-center" style="width: 80%;">
-                <nav class="fs-4 text-bg-light bg-light d-xxl-flex justify-content-xxl-center navbar navbar-light px-3" id="navbar-example2" style="width: 78%;">
+                <nav class="fs-4 text-bg-light bg-light d-xxl-flex justify-content-xxl-center navbar navbar-light px-3"
+                     id="navbar-example2" style="width: 78%;">
                     <ul class="nav nav-pills">
-                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1" style="color: rgb(0,0,0);">상세정보</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2" style="color: rgb(0,0,0);">구매평</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading3" style="color: rgb(0,0,0);">Q&amp;A</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1" style="color: rgb(0,0,0);">상세정보</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2" style="color: rgb(0,0,0);">구매평</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#scrollspyHeading3" style="color: rgb(0,0,0);">Q&amp;A</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -54,7 +61,9 @@
         <h4 id="scrollspyHeading2">구매평</h4>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-xxl-12 offset-xxl-0 d-xxl-flex justify-content-xxl-end"><button class="btn btn-primary d-xxl-flex" type="button">구매평 작성</button></div>
+                <div class="col-md-12 col-xxl-12 offset-xxl-0 d-xxl-flex justify-content-xxl-end">
+                    <button class="btn btn-primary d-xxl-flex" type="button">구매평 작성</button>
+                </div>
                 <div class="col d-flex justify-content-center" style="width: 100%;">
                     <div style="width: 85%;">
                         <table class="table table-striped table-bordered" id="example" cellspacing="0" width="100%">
@@ -77,6 +86,53 @@
         </div>
         <hr>
         <h4 id="scrollspyHeading3">Q&amp;A</h4>
+    </div>
+    <nav class="navbar navbar-light navbar-expand fixed-bottom bg-white" style="border-top: 1px solid rgb(170,170,170);">
+        <div class="container-fluid"><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div id="navcol-2" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-share-alt"></i></a></li>
+                    <li class="nav-item d-flex"><a class="nav-link d-xl-flex justify-content-xl-center" href="#"><i class="fas fa-shopping-cart d-xl-flex align-items-xl-center"></i>장바구니</a></li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item d-xl-flex align-items-xl-center" style="font-size: 26px;">
+                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;color: rgb(69,77,85);">가격 </p>
+                    </li>
+                    <li class="nav-item d-xl-flex align-items-xl-center">
+                        <p class="d-xl-flex align-items-xl-center" style="margin-bottom: 0px;font-size: 20px;">10,000원</p>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="#"><button class="btn btn-primary border rounded" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-1" style="font-size: 25px;background: rgb(86,87,89);">구매하기</button></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="offcanvas-1" class="offcanvas offcanvas-bottom" tabindex="-1" data-bs-backdrop="false" style="height: 378.1px;margin: 84px;padding: 0px;width: 100%;margin-left: 0px;">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title">주문하기</h5><button class="btn-close text-reset" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <form class="mt-4" style="width: 50%;">
+                <div class="form-group mb-3">
+                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-motorcycle"></i></span><select class="form-select">
+                        <option value="undefined" selected>배송을 선택해주세요</option>
+                        <option value="1">전날에 배송</option>
+                        <option value="2">오전 배송</option>
+                    </select></div>
+                </div>
+                <div class="form-group mb-3">
+                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-calendar-o"></i></span><select class="form-select">
+                        <option value="undefined" selected>날짜를 입력해주세요</option>
+                        <option value="12">This is item 1</option>
+                        <option value="13">This is item 2</option>
+                        <option value="14">This is item 3</option>
+                    </select></div>
+                </div>
+                <div class="form-group mb-3">
+                    <div class="input-group"><span class="text-primary input-group-text"><i class="fa fa-lock"></i></span><input class="form-control" type="password" required placeholder="Password" /></div>
+                </div>
+                <div class="form-group mb-3"></div>
+            </form>
+        </div>
     </div>
     </body>
 </th:block>
