--- a/DYEat/src/main/resources/templates/views/mybag/mybag.html
+++ b/DYEat/src/main/resources/templates/views/mybag/mybag.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
     <body>
@@ -30,16 +31,18 @@
                                     <th class="text-center filter-false sorter-false">배송정보</th>
                                 </tr>
                                 </thead>
-                                <tbody class="text-center">
-                                <tr>
+                                <tbody sec:authorize="isAuthenticated()" class="text-center">
+                                <tr th:each=" order : ${MyOrder}">
                                     <td style="width: 5%;"><input type="checkbox"></td>
-                                    <td class="text-start"><img width="100" height="80">&nbsp; Ana</td>
+                                    <td th:each="menu : ${MyMenu}" class="text-start"><img th:src="|/images/${menu.picture}|" width="100" height="80"><p th:text="${menu.title}"></p></td>
                                     <td class="text-start">
                                         <div class="d-xl-flex justify-content-xl-center justify-content-xxl-start">
                                             <p style="padding-bottom: 0px;margin-bottom: 0px;">1</p><button class="btn btn-primary" type="button" style="width: 15%;font-size: 6px;height: 15%;margin-left: 14px;">수량 변경</button>
                                         </div>
                                     </td>
-                                    <td class="text-start">0원</td>
+                                    <td class="text-start">
+                                        <p id='menu_price' th:text="${order.price}"></p> <p th:text="원"></p>
+                                    </td>
                                     <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
                                         <p>배송비 : 무료</p>
                                     </td>
@@ -48,7 +51,7 @@
                             </table>
                         </div><button class="btn btn-primary" type="button" style="margin-left: 10px;">선택된 메뉴 삭제</button><button class="btn btn-primary" type="button" style="margin-left: 11px;">전체 삭제</button>
                         <footer style="background-color: white;">
-                            <div  class="text-center" ><a href="#">계속 쇼핑하기</a></div>
+                            <div  class="text-center" ><a th:href="@{/order/list}">계속 쇼핑하기</a></div>
                         </footer>
                     </div>
                 </div>
@@ -60,12 +63,12 @@
                 <div class="text-uppercase bg-light rounded-pill px-4 py-3 font-weight-bold"><span>결제 정보</span></div>
                 <div class="p-4">
                     <ul class="list-unstyled mb-4">
-                        <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">결제 합계</strong><strong>0원</strong></li>
+                        <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">결제 합계</strong><strong th:text="${#aggregates.sum(MyOrder.![price])}+원">0원</strong></li>
                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">배송비</strong><strong>0원</strong></li>
                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">종합</strong>
-                            <h5 class="font-weight-bold">0원</h5>
+                            <h5 class="font-weight-bold" th:text="${#aggregates.sum(MyOrder.![price])}+원"> 0원</h5>
                         </li>
-                    </ul><a class="btn btn-dark rounded-pill py-2 btn-block" role="button" href="#">결제 하기</a>
+                    </ul><a class="btn btn-dark rounded-pill py-2 btn-block" role="button" th:href="@{/delivery/pay}">결제 하기</a>
                 </div>
             </div>
         </div>
