카카오페이 구현 완료 추가 개발 사항 데이터 베이스가 값추가하는 작업 진행.

--- a/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="scriptFragment">
-    <script th:src="@{/assets/js/jquery-3.3.1.min.js}"></script>
+    <script th:src="@{/assets/bootstrap/js/jquery-3.6.0.min.js}"></script>
     <script th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/assets/js/main.js}"></script>
     <script th:src="@{/assets/js/bold-and-bright.js}"></script>
@@ -9,5 +9,8 @@
     <script th:src="@{/assets/js/Image-Tab-Gallery-Horizontal.js}"></script>
     <script th:src="@{/assets/js/loginvalid.js}"></script>
     <script th:src="@{/assets/js/Multi-step-form.js}"></script>
+    <script th:src="@{/assets/js/KakaoPay.js}"></script>
+    <!-- iamport.payment.js -->
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
 </th:block>
 </html>
