--- a/DYEat/src/main/resources/templates/views/delivery/pay.html
+++ b/DYEat/src/main/resources/templates/views/delivery/pay.html
@@ -131,6 +131,9 @@
                             </div>
                         </div>
                     </form>
+                    <form action="/delivery/kakaoPay" method="post">
+                    <button class="btn btn-dark rounded-pill py-2 btn-block" role="button">카카오 페이 결제 하기</button>
+                    </form>
                 </div>
             </div>
         </div>
