--- a/DYEat/src/main/resources/templates/views/mybag/mybag.html
+++ b/DYEat/src/main/resources/templates/views/mybag/mybag.html
@@ -26,7 +26,7 @@
                                 <tr>
                                     <th>&nbsp; &nbsp;선택</th>
                                     <th class="text-center">상품정보</th>
-                                    <th class="text-center">수량</th>
+                                    <th class="text-center">수량</ th>
                                     <th class="text-center">주문금액</th>
                                     <th class="text-center filter-false sorter-false">배송정보</th>
                                 </tr>
@@ -34,7 +34,7 @@
                                 <tbody sec:authorize="isAuthenticated()" class="text-center">
                                 <tr th:each=" order : ${MyOrder}">
                                     <td style="width: 5%;"><input type="checkbox"></td>
-                                    <td th:each="menu : ${MyMenu}" class="text-start"><img th:src="|/images/${menu.picture}|" width="100" height="80"><p th:text="${menu.title}"></p></td>
+                                    <td class="text-start"><img th:src="|/images/${order.DYEMenu.picture}|" width="100" height="80"><p th:text="${order.DYEMenu.title}"></p></td>
                                     <td class="text-start">
                                         <div class="d-xl-flex justify-content-xl-center justify-content-xxl-start">
                                             <p style="padding-bottom: 0px;margin-bottom: 0px;">1</p><button class="btn btn-primary" type="button" style="width: 15%;font-size: 6px;height: 15%;margin-left: 14px;">수량 변경</button>
