--- a/DYEat/src/main/resources/templates/views/event/eventNewList.html
+++ b/DYEat/src/main/resources/templates/views/event/eventNewList.html
@@ -24,7 +24,7 @@
 
             <div id="multistep-start-row" class="row">
                 <div id="multistep-start-column" class="col-12 col-lg-8 m-auto">
-                    <form id="main-form" class="multisteps-form__form" th:action="@{/event/new}" method="post"
+                    <form id="main-form" class="multisteps-form__form" th:action="@{/event/admin/new}" method="post"
                           enctype="multipart/form-data">
                         <div id="single-form-next" class="multisteps-form__panel shadow p-4 rounded bg-white js-active"
                              data-animation="scaleIn">
