--- a/DYEat/src/main/resources/templates/views/signup/signup.html
+++ b/DYEat/src/main/resources/templates/views/signup/signup.html
@@ -32,7 +32,9 @@
                 <button class="btn btn-primary" type="button" id='userCheck' name="userCheck"
                        style="width: 25%;height: 60px;margin-left: 5px; text-align: center;font-size: 17px;background: rgb(32,113,250);border-color: rgb(255,255,255);">중복 검사</button>
             </div>
-            <span id="result"></span>
+            <div>
+                <span id='check'></span>
+            </div>
             <br>
             <div class="d-flex justify-content-start">
                 <div class="form-floating mb-3" style="width: 100%">
