--- a/DYEat/src/main/resources/templates/views/event/eventEditList.html
+++ b/DYEat/src/main/resources/templates/views/event/eventEditList.html
@@ -24,7 +24,7 @@
 
             <div id="multistep-start-row" class="row">
                 <div id="multistep-start-column" class="col-12 col-lg-8 m-auto">
-                    <form id="main-form" class="multisteps-form__form" th:action="@{/admin/order/new}" method="post"
+                    <form id="main-form" class="multisteps-form__form" th:action="@{/order/admin/{id}/update (id=${updateEvent.id})}" method="post"
                           enctype="multipart/form-data">
                         <div id="single-form-next" class="multisteps-form__panel shadow p-4 rounded bg-white js-active"
                              data-animation="scaleIn">
@@ -48,19 +48,15 @@
                             <div id="form-content-1" class="multisteps-form__content" style="width: 100%">
                                 <div id="input-grp-double-1" class="form-row mt-4" style="width: 100%" >
                                     <div class="d-flex justify-content-start col-12 col-sm-6" style="width: 100%" >
-                                        <label style="width: 10%; margin-top: 10px">메뉴 이름 :  </label><input
+                                        <label style="width: 10%; margin-top: 10px">이벤트 이름 :</label><input
                                             style="width: 90%"
                                             class="form-control multisteps-form__input"
-                                            type="text" name="menuName" placeholder="메뉴 이름"/></div>
+                                            type="text" name="menuName" placeholder="이벤트 이름"/></div>
                                 </div>
                                 <div id="input-grp-single-1" class="form-row mt-4">
                                     <div class="col-12">
                                         <label style="width: 20%; margin-top: 10px">사진</label>
                                         <input class="form-control multisteps-form__input" name="mainFile" type="file"/>
-                                    </div>
-                                    <div class="col-12">
-                                        <label style="width: 20%; margin-top: 10px">사진</label>
-                                        <input class="form-control multisteps-form__input" multiple="multiple" name="imageFiles" type="file"/>
                                     </div>
                                 </div>
                                 <div id="next-prev-buttons" class="button-row d-flex mt-4">
@@ -76,23 +72,18 @@
                              data-animation="scaleIn">
                             <h3 class="text-center multisteps-form__title">정보 입력</h3>
                             <div id="form-content-2" class="multisteps-form__content" style="width: 100%">
-                                <div class="col-12 col-sm-6 mt-4 mt-sm-0" style="width: 100%">
-                                    <select name="type" class="form-select">
-                                        <option value="undefined" selected>종류를 선택하세요</option>
-                                        <option value="1">정기 음식</option>
-                                        <option value="2">단품 음식</option>
-                                    </select>
-                                </div>
-                                <div id="input-grp-double-2" class="form-row mt-4" style="width: 100%">
-                                    <div class="d-flex justify-content-start col-12 col-sm-6" style="width: 100%">
-                                        <label style="width: 10%; margin-top: 10px">가격:</label>
-                                        <input name="price" style="width: 90%" class="form-control multisteps-form__input" type="text" placeholder="가격 설정"/></div>
-                                </div>
                                 <div id="input-grp-single-2" class="form-row mt-4"  style="width: 100%">
                                     <div class="d-flex justify-content-start col-12 col-sm-6"  style="width: 100%">
                                         <label style="width: 10%; margin-top: 10px">내용 입력:</label>
                                         <input name="text" style="width: 90%" class="form-control multisteps-form__input" type="text"
                                                                placeholder="내용을 입력해주세요"/></div>
+                                </div>
+                                <div class="col-12 col-sm-6 mt-4 mt-sm-0" style="width: 100%">
+                                    <select name="onoff" class="form-select" th:field="*{updateEvent.onoff}">
+                                        <option value="undefined" selected>이벤트를 입력해주세요</option>
+                                        <option value="0">진행 이벤트</option>
+                                        <option value="1">종료 이벤트</option>
+                                    </select>
                                 </div>
                                 <div id="next-prev-buttons-1" class="button-row d-flex mt-4">
                                     <button class="btn btn btn-primary js-btn-prev" type="button" title="Prev">이전
