--- a/DYEat/src/main/resources/templates/views/faq/faq.html
+++ b/DYEat/src/main/resources/templates/views/faq/faq.html
@@ -3,45 +3,62 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
-  <section class="py-5 my-5">
-    <div class="container py-5" >
-      <div class="row mb-2">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-          <h2 class="display-6 fw-bold mb-5"><span class="pb-3 underline">FAQ<br /></span></h2>
-          <p class="text-muted mb-5">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+    <section class="py-5 my-5">
+        <div class="container py-5">
+            <div class="row mb-2">
+                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <h2 class="display-6 fw-bold mb-5"><span class="pb-3 underline">FAQ<br/></span></h2>
+                    <p class="text-muted mb-5">환불은 어떤 방식으로 진행되나요?</p>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-md-8 mx-auto">
+                    <div id="accordion-1" class="accordion text-muted" role="tablist">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" role="tab">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#accordion-1 .item-1" aria-expanded="true"
+                                        aria-controls="accordion-1 .item-1">환불은 어떤 방식으로 진행되나요?
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse show item-1" role="tabpanel"
+                                 data-bs-parent="#accordion-1">
+                                <div class="accordion-body">
+                                    <p>메인 페이지 밑에 전화 번호로 연락 후 확인 조치를 취해 환불 할 예정입니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" role="tab">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#accordion-1 .item-2" aria-expanded="false"
+                                        aria-controls="accordion-1 .item-2">이달의 식단은 어떤 방식으로 선정되었나요?
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse item-2" role="tabpanel"
+                                 data-bs-parent="#accordion-1">
+                                <div class="accordion-body">
+                                    <p class="mb-0">제철음식,자주 먹는 음식, 회원님들이 자주 배달하던 음식 순으로 선정했습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" role="tab">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#accordion-1 .item-3" aria-expanded="false"
+                                        aria-controls="accordion-1 .item-3">요리는 어떤 분이 하시나요?
+                                </button>
+                            </h2>
+                            <div class="accordion-collapse collapse item-3" role="tabpanel"
+                                 data-bs-parent="#accordion-1">
+                                <div class="accordion-body">
+                                    <p class="mb-0">각 지역의 가게에 협업을 맺고 진행하는 방식을 하고 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row mb-2">
-        <div class="col-md-8 mx-auto">
-          <div id="accordion-1" class="accordion text-muted" role="tablist">
-            <div class="accordion-item">
-              <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="true" aria-controls="accordion-1 .item-1">Aenean arcu euismod aliquam, volutpat consequat?</button></h2>
-              <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-1">
-                <div class="accordion-body">
-                  <p>Maecenas diam volutpat, erat quis enim cras lobortis vivamus donec tempor. Congue ultrices donec turpis vivamus. Laoreet aenean metus, mi nunc massa feugiat duis. Pharetra erat consequat purus curae quisque, etiam accumsan class.</p>
-                  <p class="mb-0">Commodo rutrum quisque curabitur habitasse, suspendisse etiam.</p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Lorem quam erat placerat mollis, rhoncus senectus?</button></h2>
-              <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
-                <div class="accordion-body">
-                  <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3">Iaculis accumsan id, facilisis proin ipsum velit neque?</button></h2>
-              <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
-                <div class="accordion-body">
-                  <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 </th:block>
