--- a/DYEat/src/main/resources/templates/views/main/index.html
+++ b/DYEat/src/main/resources/templates/views/main/index.html
@@ -50,7 +50,7 @@
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                 <div th:each="Menulist : ${menuData}" th:if="${Menulist.type == 1}" class="col offset-xxl-1 item"><a
                         th:href="@{/order/{id}/detail (id=${Menulist.id})}"
-                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img style="width: 400px; height: 400px;"
                         class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
                     <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
                         <span style="background-color: rgba(255, 255, 255, 0);" th:text="${Menulist.title}"></span></h2>
@@ -75,7 +75,7 @@
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                 <div th:each="Menulist : ${menuData}" th:if="${Menulist.type == 2}" class="col offset-xxl-1 item"><a
                         th:href="@{/order/{id}/detail (id=${Menulist.id})}"
-                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img style="width: 400px; height: 400px;"
                         class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
                     <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
                         <span style="background-color: rgba(255, 255, 255, 0);" th:text="${Menulist.title}"></span></h2>
