--- a/DYEat/src/main/resources/templates/views/order/orderEditList.html
+++ b/DYEat/src/main/resources/templates/views/order/orderEditList.html
@@ -24,7 +24,7 @@
 
             <div id="multistep-start-row" class="row">
                 <div id="multistep-start-column" class="col-12 col-lg-8 m-auto">
-                    <form id="main-form" class="multisteps-form__form" th:action="@{/admin/order/new}" method="post"
+                    <form id="main-form" class="multisteps-form__form" th:action="@{/order/admin/{id}/update (id=${updateMenu.id})}" method="post"
                           enctype="multipart/form-data">
                         <div id="single-form-next" class="multisteps-form__panel shadow p-4 rounded bg-white js-active"
                              data-animation="scaleIn">
@@ -48,7 +48,7 @@
                             <div id="form-content-1" class="multisteps-form__content" style="width: 100%">
                                 <div id="input-grp-double-1" class="form-row mt-4" style="width: 100%" >
                                     <div class="d-flex justify-content-start col-12 col-sm-6" style="width: 100%" >
-                                        <label style="width: 10%; margin-top: 10px">메뉴 이름 :  </label><input
+                                        <label style="width: 10%; margin-top: 10px">메뉴 이름 :  </label><input th:value="${updateMenu.title}"
                                             style="width: 90%"
                                             class="form-control multisteps-form__input"
                                             type="text" name="menuName" placeholder="메뉴 이름"/></div>
@@ -86,12 +86,12 @@
                                 <div id="input-grp-double-2" class="form-row mt-4" style="width: 100%">
                                     <div class="d-flex justify-content-start col-12 col-sm-6" style="width: 100%">
                                         <label style="width: 10%; margin-top: 10px">가격:</label>
-                                        <input name="price" style="width: 90%" class="form-control multisteps-form__input" type="text" placeholder="가격 설정"/></div>
+                                        <input th:value="${updateMenu.price}" name="price" style="width: 90%" class="form-control multisteps-form__input" type="text" placeholder="가격 설정"/></div>
                                 </div>
                                 <div id="input-grp-single-2" class="form-row mt-4"  style="width: 100%">
                                     <div class="d-flex justify-content-start col-12 col-sm-6"  style="width: 100%">
                                         <label style="width: 10%; margin-top: 10px">내용 입력:</label>
-                                        <input name="text" style="width: 90%" class="form-control multisteps-form__input" type="text"
+                                        <input name="text" style="width: 90%" class="form-control multisteps-form__input" type="text" th:value="${updateMenu.text}"
                                                                placeholder="내용을 입력해주세요"/></div>
                                 </div>
                                 <div id="next-prev-buttons-1" class="button-row d-flex mt-4">
