--- a/DYEat/src/main/resources/templates/views/order/orderList.html
+++ b/DYEat/src/main/resources/templates/views/order/orderList.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
 
@@ -15,66 +16,73 @@
                                         aria-selected="false" href="#item-1-2" data-bs-toggle="tab">단품</a></li>
             </ul>
         </div>
-        <div class="card-body">
-            <div id="nav-tabContent" class="tab-content">
-                <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
-                    <section class="photo-gallery py-4 py-xl-5">
-                        <div class="container">
-                            <div class="row mb-5">
-                                <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
-                                    <h2 style="text-align: center;font-family: Adamina, serif;font-weight: bold;">정기 배송
-                                        한정식</h2>
-                                    <p class="w-lg-50"></p>
-                                </div>
-                            </div>
-                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos"
-                                 data-bss-baguettebox="">
-                                <div th:each="Menulist : ${menuData}"  th:if="${Menulist.type == 1}" class="col offset-xxl-1 item"><a
-                                        th:href="@{/order/{id}/detail (id=${Menulist.id})}"
-                                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
-                                        style="width: 400px; height: 400px;"
-                                        class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
-                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
-                                        <span style="background-color: rgba(255, 255, 255, 0);"
-                                              th:text="${Menulist.title}"></span></h2>
-                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;"
-                                       th:text="|${Menulist.price}원|"></p>
-                                </a></div>
+        <div sec:authorize="hasRole('ROLE_ADMIN')">
+            <a th:href="@{/admin/order/new}" class="btn btn-primary" type="button">주문 게시판 생성</a>
+        </div>
+    </div>
+    <div class="card-body">
+        <div id="nav-tabContent" class="tab-content">
+            <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
+                <section class="photo-gallery py-4 py-xl-5">
+                    <div class="container">
+                        <div class="row mb-5">
+                            <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
+                                <h2 style="text-align: center;font-family: Adamina, serif;font-weight: bold;">정기 배송
+                                    한정식</h2>
+                                <p class="w-lg-50"></p>
                             </div>
                         </div>
-                    </section>
-                </div>
-                <!--정기 배송 끝-->
+                        <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos"
+                             data-bss-baguettebox="">
+                            <div th:each="Menulist : ${menuData}" th:if="${Menulist.type == 1}"
+                                 class="col offset-xxl-1 item"><a
+                                    th:href="@{/order/{id}/detail (id=${Menulist.id})}"
+                                    style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                                    style="width: 400px; height: 400px;"
+                                    class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
+                                <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
+                                        <span style="background-color: rgba(255, 255, 255, 0);"
+                                              th:text="${Menulist.title}"></span></h2>
+                                <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;"
+                                   th:text="|${Menulist.price}원|"></p>
+                            </a></div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <!--정기 배송 끝-->
 
-                <!--단품 배송 시작-->
-                <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
-                    <section class="photo-gallery py-4 py-xl-5">
-                        <div class="container">
-                            <div class="row mb-5">
-                                <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
-                                    <h2 style="text-align: center;font-family: Adamina, serif;"><strong>단품 메뉴</strong>
-                                    </h2>
-                                    <p class="w-lg-50"></p>
-                                </div>
-                            </div>
-                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos"
-                                 data-bss-baguettebox="">
-                                <div th:each="Menulist : ${menuData}" th:if="${Menulist.type == 2}" class="col offset-xxl-1 item"><a
-                                        th:href="@{/order/{id}/detail (id=${Menulist.id})}"
-                                        style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img style="width: 400px; height: 400px;"
-                                        class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
-                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
-                                        <span style="background-color: rgba(255, 255, 255, 0);"
-                                              th:text="${Menulist.title}"></span></h2>
-                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;"
-                                       th:text="|${Menulist.price}원|"></p>
-                                </a></div>
+            <!--단품 배송 시작-->
+            <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
+                <section class="photo-gallery py-4 py-xl-5">
+                    <div class="container">
+                        <div class="row mb-5">
+                            <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
+                                <h2 style="text-align: center;font-family: Adamina, serif;"><strong>단품 메뉴</strong>
+                                </h2>
+                                <p class="w-lg-50"></p>
                             </div>
                         </div>
-                    </section>
-                </div>
+                        <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos"
+                             data-bss-baguettebox="">
+                            <div th:each="Menulist : ${menuData}" th:if="${Menulist.type == 2}"
+                                 class="col offset-xxl-1 item"><a
+                                    th:href="@{/order/{id}/detail (id=${Menulist.id})}"
+                                    style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img
+                                    style="width: 400px; height: 400px;"
+                                    class="rounded img-fluid border" th:src="|/images/${Menulist.picture}|">
+                                <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;">
+                                        <span style="background-color: rgba(255, 255, 255, 0);"
+                                              th:text="${Menulist.title}"></span></h2>
+                                <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;"
+                                   th:text="|${Menulist.price}원|"></p>
+                            </a></div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
+    </div>
     </div>
     <!--단품 배송 끝-->
     </body>
